feat: switch tests to JUnit 6